test.h

typedef struct drand48_data {
  unsigned short __x[3];
  unsigned short __old_x[3];
  unsigned short __c;
  unsigned short __init;
  unsigned long long __a;
} drand48_data;
typedef unsigned int __uint32_t;
typedef int (*__compar_fn_t)(const void *arg1, const void *arg2);
typedef struct div_t {
  int quot;
  int rem;
} div_t;
typedef struct ldiv_t {
  long quot;
  long rem;
} ldiv_t;
typedef struct lldiv_t {
  long long quot;
  long long rem;
} lldiv_t;
typedef int wchar_t;
extern long jrand48(unsigned short *__xsubi);
extern void srand48(long __seedval);
extern unsigned short *seed48(unsigned short *__seed16v);
extern void lcong48(unsigned short *__param);
extern int drand48_r(struct drand48_data *__buffer, double *__result);
extern int erand48_r(unsigned short *__xsubi, struct drand48_data *__buffer,
                     double *__result);
extern int lrand48_r(struct drand48_data *__buffer, long *__result);
extern int nrand48_r(unsigned short *__xsubi, struct drand48_data *__buffer,
                     long *__result);
extern int mrand48_r(struct drand48_data *__buffer, long *__result);
extern int jrand48_r(unsigned short *__xsubi, struct drand48_data *__buffer,
                     long *__result);
extern int srand48_r(long __seedval, struct drand48_data *__buffer);
extern int seed48_r(unsigned short *__seed16v, struct drand48_data *__buffer);
extern int lcong48_r(unsigned short *__param, struct drand48_data *__buffer);
extern __uint32_t arc4random(void);
extern void arc4random_buf(void *__buf, uintptr_t __size);
extern __uint32_t arc4random_uniform(__uint32_t __upper_bound);
extern void *malloc(unsigned long __size);
extern void *calloc(unsigned long __nmemb, unsigned long __size);
extern void *realloc(void *__ptr, unsigned long __size);
extern void free(void *__ptr);
extern void *reallocarray(void *__ptr, uintptr_t __nmemb, uintptr_t __size);
extern void *alloca(unsigned long __size);
extern void *valloc(uintptr_t __size);
extern int posix_memalign(void **__memptr, uintptr_t __alignment,
                          uintptr_t __size);
extern void *aligned_alloc(unsigned long __alignment, unsigned long __size);
extern void abort(void);
extern int atexit(void (*__func)(void));
extern int at_quick_exit(void (*__func)(void));
extern int on_exit(void (*__func)(int __status, void *__arg), void *__arg);
extern void exit(int __status);
extern void quick_exit(int __status);
extern void _Exit(int __status);
extern char *getenv(const char *__name);
extern int putenv(char *__string);
extern int setenv(const char *__name, const char *__value, int __replace);
extern int unsetenv(const char *__name);
extern int clearenv(void);
extern char *mktemp(char *__template);
extern int mkstemp(char *__template);
extern int mkstemps(char *__template, int __suffixlen);
extern char *mkdtemp(char *__template);
extern int system(const char *__command);
extern char *realpath(const char *__name, char *__resolved);
extern void *bsearch(const void *__key, const void *__base, uintptr_t __nmemb,
                     uintptr_t __size, __compar_fn_t __compar);
extern void qsort(void *__base, uintptr_t __nmemb, uintptr_t __size,
                  __compar_fn_t __compar);
extern int abs(int __x);
extern long labs(long __x);
extern long long llabs(long long __x);
extern struct div_t div(int __numer, int __denom);
extern struct ldiv_t ldiv(long __numer, long __denom);
extern struct lldiv_t lldiv(long long __numer, long long __denom);
extern char *ecvt(double __value, int __ndigit, int *__decpt, int *__sign);
extern char *fcvt(double __value, int __ndigit, int *__decpt, int *__sign);
extern char *gcvt(double __value, int __ndigit, char *__buf);
extern char *qecvt(u128 __value, int __ndigit, int *__decpt, int *__sign);
extern char *qfcvt(u128 __value, int __ndigit, int *__decpt, int *__sign);
extern char *qgcvt(u128 __value, int __ndigit, char *__buf);
extern int ecvt_r(double __value, int __ndigit, int *__decpt, int *__sign,
                  char *__buf, uintptr_t __len);
extern int fcvt_r(double __value, int __ndigit, int *__decpt, int *__sign,
                  char *__buf, uintptr_t __len);
extern int qecvt_r(u128 __value, int __ndigit, int *__decpt, int *__sign,
                   char *__buf, uintptr_t __len);
extern int qfcvt_r(u128 __value, int __ndigit, int *__decpt, int *__sign,
                   char *__buf, uintptr_t __len);
extern int mblen(const char *__s, uintptr_t __n);
extern int mbtowc(wchar_t *__pwc, const char *__s, uintptr_t __n);
extern int wctomb(char *__s, wchar_t __wchar);
extern uintptr_t mbstowcs(wchar_t *__pwcs, const char *__s, uintptr_t __n);
extern uintptr_t wcstombs(char *__s, const wchar_t *__pwcs, uintptr_t __n);
extern int rpmatch(const char *__response);
extern int getsubopt(char **__optionp, char *const *__tokens, char **__valuep);
extern int getloadavg(double *__loadavg, int __nelem);
extern void *memcpy(void *__dest, const void *__src, unsigned long __n);
extern void *memmove(void *__dest, const void *__src, unsigned long __n);
extern void *memccpy(void *__dest, const void *__src, int __c,
                     unsigned long __n);
extern void *memset(void *__s, int __c, unsigned long __n);
extern int memcmp(const void *__s1, const void *__s2, unsigned long __n);
extern int __memcmpeq(const void *__s1, const void *__s2, uintptr_t __n);
extern void *memchr(const void *__s, int __c, unsigned long __n);
extern char *strcpy(char *__dest, const char *__src);
extern char *strncpy(char *__dest, const char *__src, unsigned long __n);