src/GeoIP.rs

extern "C" {
    pub fn jrand48(__xsubi: *mut ::std::ffi::c_ushort) -> ::std::ffi::c_long;
}
extern "C" {
    pub fn srand48(__seedval: ::std::ffi::c_long);
}
extern "C" {
    pub fn seed48(__seed16v: *mut ::std::ffi::c_ushort) -> *mut ::std::ffi::c_ushort;
}
extern "C" {
    pub fn lcong48(__param: *mut ::std::ffi::c_ushort);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct drand48_data {
    pub __x: [::std::ffi::c_ushort; 3usize],
    pub __old_x: [::std::ffi::c_ushort; 3usize],
    pub __c: ::std::ffi::c_ushort,
    pub __init: ::std::ffi::c_ushort,
    pub __a: ::std::ffi::c_ulonglong,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of drand48_data"][::std::mem::size_of::<drand48_data>() - 24usize];
    ["Alignment of drand48_data"][::std::mem::align_of::<drand48_data>() - 8usize];
    ["Offset of field: drand48_data::__x"][::std::mem::offset_of!(drand48_data, __x) - 0usize];
    ["Offset of field: drand48_data::__old_x"]
        [::std::mem::offset_of!(drand48_data, __old_x) - 6usize];
    ["Offset of field: drand48_data::__c"][::std::mem::offset_of!(drand48_data, __c) - 12usize];
    ["Offset of field: drand48_data::__init"]
        [::std::mem::offset_of!(drand48_data, __init) - 14usize];
    ["Offset of field: drand48_data::__a"][::std::mem::offset_of!(drand48_data, __a) - 16usize];
};
extern "C" {
    pub fn drand48_r(__buffer: *mut drand48_data, __result: *mut f64) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn erand48_r(
        __xsubi: *mut ::std::ffi::c_ushort,
        __buffer: *mut drand48_data,
        __result: *mut f64,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn lrand48_r(
        __buffer: *mut drand48_data,
        __result: *mut ::std::ffi::c_long,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn nrand48_r(
        __xsubi: *mut ::std::ffi::c_ushort,
        __buffer: *mut drand48_data,
        __result: *mut ::std::ffi::c_long,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn mrand48_r(
        __buffer: *mut drand48_data,
        __result: *mut ::std::ffi::c_long,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn jrand48_r(
        __xsubi: *mut ::std::ffi::c_ushort,
        __buffer: *mut drand48_data,
        __result: *mut ::std::ffi::c_long,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn srand48_r(
        __seedval: ::std::ffi::c_long,
        __buffer: *mut drand48_data,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn seed48_r(
        __seed16v: *mut ::std::ffi::c_ushort,
        __buffer: *mut drand48_data,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn lcong48_r(
        __param: *mut ::std::ffi::c_ushort,
        __buffer: *mut drand48_data,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn arc4random() -> __uint32_t;
}
extern "C" {
    pub fn arc4random_buf(__buf: *mut ::std::ffi::c_void, __size: usize);
}
extern "C" {
    pub fn arc4random_uniform(__upper_bound: __uint32_t) -> __uint32_t;
}
extern "C" {
    pub fn malloc(__size: ::std::ffi::c_ulong) -> *mut ::std::ffi::c_void;
}
extern "C" {
    pub fn calloc(
        __nmemb: ::std::ffi::c_ulong,
        __size: ::std::ffi::c_ulong,
    ) -> *mut ::std::ffi::c_void;
}
extern "C" {
    pub fn realloc(
        __ptr: *mut ::std::ffi::c_void,
        __size: ::std::ffi::c_ulong,
    ) -> *mut ::std::ffi::c_void;
}
extern "C" {
    pub fn free(__ptr: *mut ::std::ffi::c_void);
}
extern "C" {
    pub fn reallocarray(
        __ptr: *mut ::std::ffi::c_void,
        __nmemb: usize,
        __size: usize,
    ) -> *mut ::std::ffi::c_void;
}
extern "C" {
    pub fn alloca(__size: ::std::ffi::c_ulong) -> *mut ::std::ffi::c_void;
}
extern "C" {
    pub fn valloc(__size: usize) -> *mut ::std::ffi::c_void;
}
extern "C" {
    pub fn posix_memalign(
        __memptr: *mut *mut ::std::ffi::c_void,
        __alignment: usize,
        __size: usize,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn aligned_alloc(
        __alignment: ::std::ffi::c_ulong,
        __size: ::std::ffi::c_ulong,
    ) -> *mut ::std::ffi::c_void;
}
extern "C" {
    pub fn abort() -> !;
}
extern "C" {
    pub fn atexit(__func: ::std::option::Option<unsafe extern "C" fn()>) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn at_quick_exit(
        __func: ::std::option::Option<unsafe extern "C" fn()>,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn on_exit(
        __func: ::std::option::Option<
            unsafe extern "C" fn(__status: ::std::ffi::c_int, __arg: *mut ::std::ffi::c_void),
        >,
        __arg: *mut ::std::ffi::c_void,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn exit(__status: ::std::ffi::c_int) -> !;
}
extern "C" {
    pub fn quick_exit(__status: ::std::ffi::c_int) -> !;
}
extern "C" {
    pub fn _Exit(__status: ::std::ffi::c_int) -> !;
}
extern "C" {
    pub fn getenv(__name: *const ::std::ffi::c_char) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn putenv(__string: *mut ::std::ffi::c_char) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn setenv(
        __name: *const ::std::ffi::c_char,
        __value: *const ::std::ffi::c_char,
        __replace: ::std::ffi::c_int,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn unsetenv(__name: *const ::std::ffi::c_char) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn clearenv() -> ::std::ffi::c_int;
}
extern "C" {
    pub fn mktemp(__template: *mut ::std::ffi::c_char) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn mkstemp(__template: *mut ::std::ffi::c_char) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn mkstemps(
        __template: *mut ::std::ffi::c_char,
        __suffixlen: ::std::ffi::c_int,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn mkdtemp(__template: *mut ::std::ffi::c_char) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn system(__command: *const ::std::ffi::c_char) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn realpath(
        __name: *const ::std::ffi::c_char,
        __resolved: *mut ::std::ffi::c_char,
    ) -> *mut ::std::ffi::c_char;
}
pub type __compar_fn_t = ::std::option::Option<
    unsafe extern "C" fn(
        arg1: *const ::std::ffi::c_void,
        arg2: *const ::std::ffi::c_void,
    ) -> ::std::ffi::c_int,
>;
extern "C" {
    pub fn bsearch(
        __key: *const ::std::ffi::c_void,
        __base: *const ::std::ffi::c_void,
        __nmemb: usize,
        __size: usize,
        __compar: __compar_fn_t,
    ) -> *mut ::std::ffi::c_void;
}
extern "C" {
    pub fn qsort(
        __base: *mut ::std::ffi::c_void,
        __nmemb: usize,
        __size: usize,
        __compar: __compar_fn_t,
    );
}
extern "C" {
    pub fn abs(__x: ::std::ffi::c_int) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn labs(__x: ::std::ffi::c_long) -> ::std::ffi::c_long;
}
extern "C" {
    pub fn llabs(__x: ::std::ffi::c_longlong) -> ::std::ffi::c_longlong;
}
extern "C" {
    pub fn div(__numer: ::std::ffi::c_int, __denom: ::std::ffi::c_int) -> div_t;
}
extern "C" {
    pub fn ldiv(__numer: ::std::ffi::c_long, __denom: ::std::ffi::c_long) -> ldiv_t;
}
extern "C" {
    pub fn lldiv(__numer: ::std::ffi::c_longlong, __denom: ::std::ffi::c_longlong) -> lldiv_t;
}
extern "C" {
    pub fn ecvt(
        __value: f64,
        __ndigit: ::std::ffi::c_int,
        __decpt: *mut ::std::ffi::c_int,
        __sign: *mut ::std::ffi::c_int,
    ) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn fcvt(
        __value: f64,
        __ndigit: ::std::ffi::c_int,
        __decpt: *mut ::std::ffi::c_int,
        __sign: *mut ::std::ffi::c_int,
    ) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn gcvt(
        __value: f64,
        __ndigit: ::std::ffi::c_int,
        __buf: *mut ::std::ffi::c_char,
    ) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn qecvt(
        __value: u128,
        __ndigit: ::std::ffi::c_int,
        __decpt: *mut ::std::ffi::c_int,
        __sign: *mut ::std::ffi::c_int,
    ) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn qfcvt(
        __value: u128,
        __ndigit: ::std::ffi::c_int,
        __decpt: *mut ::std::ffi::c_int,
        __sign: *mut ::std::ffi::c_int,
    ) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn qgcvt(
        __value: u128,
        __ndigit: ::std::ffi::c_int,
        __buf: *mut ::std::ffi::c_char,
    ) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn ecvt_r(
        __value: f64,
        __ndigit: ::std::ffi::c_int,
        __decpt: *mut ::std::ffi::c_int,
        __sign: *mut ::std::ffi::c_int,
        __buf: *mut ::std::ffi::c_char,
        __len: usize,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn fcvt_r(
        __value: f64,
        __ndigit: ::std::ffi::c_int,
        __decpt: *mut ::std::ffi::c_int,
        __sign: *mut ::std::ffi::c_int,
        __buf: *mut ::std::ffi::c_char,
        __len: usize,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn qecvt_r(
        __value: u128,
        __ndigit: ::std::ffi::c_int,
        __decpt: *mut ::std::ffi::c_int,
        __sign: *mut ::std::ffi::c_int,
        __buf: *mut ::std::ffi::c_char,
        __len: usize,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn qfcvt_r(
        __value: u128,
        __ndigit: ::std::ffi::c_int,
        __decpt: *mut ::std::ffi::c_int,
        __sign: *mut ::std::ffi::c_int,
        __buf: *mut ::std::ffi::c_char,
        __len: usize,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn mblen(__s: *const ::std::ffi::c_char, __n: usize) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn mbtowc(
        __pwc: *mut wchar_t,
        __s: *const ::std::ffi::c_char,
        __n: usize,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn wctomb(__s: *mut ::std::ffi::c_char, __wchar: wchar_t) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn mbstowcs(__pwcs: *mut wchar_t, __s: *const ::std::ffi::c_char, __n: usize) -> usize;
}
extern "C" {
    pub fn wcstombs(__s: *mut ::std::ffi::c_char, __pwcs: *const wchar_t, __n: usize) -> usize;
}
extern "C" {
    pub fn rpmatch(__response: *const ::std::ffi::c_char) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn getsubopt(
        __optionp: *mut *mut ::std::ffi::c_char,
        __tokens: *const *mut ::std::ffi::c_char,
        __valuep: *mut *mut ::std::ffi::c_char,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn getloadavg(__loadavg: *mut f64, __nelem: ::std::ffi::c_int) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn memcpy(
        __dest: *mut ::std::ffi::c_void,
        __src: *const ::std::ffi::c_void,
        __n: ::std::ffi::c_ulong,
    ) -> *mut ::std::ffi::c_void;
}
extern "C" {
    pub fn memmove(
        __dest: *mut ::std::ffi::c_void,
        __src: *const ::std::ffi::c_void,
        __n: ::std::ffi::c_ulong,
    ) -> *mut ::std::ffi::c_void;
}
extern "C" {
    pub fn memccpy(
        __dest: *mut ::std::ffi::c_void,
        __src: *const ::std::ffi::c_void,
        __c: ::std::ffi::c_int,
        __n: ::std::ffi::c_ulong,
    ) -> *mut ::std::ffi::c_void;
}
extern "C" {
    pub fn memset(
        __s: *mut ::std::ffi::c_void,
        __c: ::std::ffi::c_int,
        __n: ::std::ffi::c_ulong,
    ) -> *mut ::std::ffi::c_void;
}
extern "C" {
    pub fn memcmp(
        __s1: *const ::std::ffi::c_void,
        __s2: *const ::std::ffi::c_void,
        __n: ::std::ffi::c_ulong,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn __memcmpeq(
        __s1: *const ::std::ffi::c_void,
        __s2: *const ::std::ffi::c_void,
        __n: usize,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn memchr(
        __s: *const ::std::ffi::c_void,
        __c: ::std::ffi::c_int,
        __n: ::std::ffi::c_ulong,
    ) -> *mut ::std::ffi::c_void;
}
extern "C" {
    pub fn strcpy(
        __dest: *mut ::std::ffi::c_char,
        __src: *const ::std::ffi::c_char,
    ) -> *mut ::std::ffi::c_char;
}
extern "C" {
    pub fn strncpy(
        __dest: *mut ::std::ffi::c_char,
        __src: *const ::std::ffi::c_char,
        __n: ::std::ffi::c_ulong,
    ) -> *mut ::std::ffi::c_char;
}
